hphp/hack/test/typecheck/dynamic/coercion/append.php.exp
File "append.php", line 6, characters 10-11:
Invalid return type (Typing[4110])
File "append.php", line 3, characters 40-46:
This is a dynamic value
File "append.php", line 5, characters 11-14:
It is incompatible with a string
